--- a/index.html
+++ b/index.html
@@ -17,5 +17,10 @@
         </ul>
         </nav>
     </header>
+    <main>
+        <div class="gallery">
+            
+        </div>
+    </main>
 </body>
 </html>
