--- a/index.html
+++ b/index.html
@@ -14,12 +14,14 @@
             <li><a href="#">Главная</a></li>
             <li><a href="#">О нас</a></li>
             <li><a href="#">Продукты</a></li>
+            <li><a href="#">Продукты</a></li>
+            <li><a href="#">Продукты</a></li>
         </ul>
         </nav>
     </header>
     <main>
         <div class="gallery">
-            
+
         </div>
     </main>
 </body>
