added footer an 2 block

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         </nav>
     </header>
     <main>
-        <div class="gallery">
-
-        </div>
+        <div class="gallery"></div>
+        <div></div>
     </main>
+    <footer></footer>
 </body>
 </html>
